--- a/src/styles/blocks/site-head.css
+++ b/src/styles/blocks/site-head.css
@@ -1,4 +1,4 @@
-header:not(article > header) {
+.site-header {
     position: fixed;
     top: 0;
     left: 0;
